--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,7 +6,7 @@
     year={2023},
     journal={arXiv preprint arXiv:2305.11476},
     pdf={https://arxiv.org/abs/2305.11476.pdf},
-    video={https://sites.google.com/view/rpbt},
-    code={https://github.com/Jackory/RPBT}
+    website={https://sites.google.com/view/rpbt},
+    code={https://github.com/Jackory/RPBT},
     selected={True},
 }
