--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,5 +8,5 @@
     pdf={https://arxiv.org/abs/2305.11476.pdf},
     website={https://sites.google.com/view/rpbt},
     code={https://github.com/Jackory/RPBT},
-    selected={True},
+    selected={true},
 }
