--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,7 @@
 
 
 @misc{jiang2023learning,
+    abbr={preprint},
     title={Learning Diverse Risk Preferences in Population-based Self-play},
     author={Yuhua Jiang* and Qihan Liu* and Xiaoteng Ma and Chenghao Li and Yiqin Yang and Jun Yang and Bin Liang and Qianchuan Zhao},
     year={2023},
