--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,13 +1,25 @@
 
 
 @misc{jiang2023learning,
-    abbr={preprint},
+    abbr={AAAI 2024 oral (top 3%)},
     title={Learning Diverse Risk Preferences in Population-based Self-play},
     author={Yuhua Jiang* and Qihan Liu* and Xiaoteng Ma and Chenghao Li and Yiqin Yang and Jun Yang and Bin Liang and Qianchuan Zhao},
-    year={2023},
-    journal={arXiv preprint arXiv:2305.11476},
+    year={2024},
+    journal={Proceedings of the AAAI Conference on Artificial Intelligence},
     pdf={https://arxiv.org/abs/2305.11476.pdf},
     website={https://sites.google.com/view/rpbt},
     code={https://github.com/Jackory/RPBT},
+    selected={true},
+}
+
+@inproceedings{
+    abbr={ICLR 2025},
+    title={Episodic Novelty Through Temporal Distance},
+    author={Yuhua Jiang* and Qihan Liu* and Yiqin Yang and Xiaoteng Ma and Dianyu Zhong and Hao Hu and Jun Yang and Bin Liang and Bo XU and Chongjie Zhang and Qianchuan Zhao},
+    journal={ICLR},
+    booktitle={The Thirteenth International Conference on Learning Representations},
+    year={2025},
+    pdf={https://openreview.net/forum?id=I7DeajDEx7},
+    code={https://github.com/Jackory/ETD},
     selected={true},
 }
