--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,7 +1,7 @@
 
 
 @misc{jiang2023learning,
-    abbr={AAAI 2024 oral (top 3%)},
+    abbr={AAAI 2024 oral},
     title={Learning Diverse Risk Preferences in Population-based Self-play},
     author={Yuhua Jiang* and Qihan Liu* and Xiaoteng Ma and Chenghao Li and Yiqin Yang and Jun Yang and Bin Liang and Qianchuan Zhao},
     year={2024},
@@ -12,7 +12,7 @@
     selected={true},
 }
 
-@inproceedings{
+@inproceedings{jiang2025episodic,
     abbr={ICLR 2025},
     title={Episodic Novelty Through Temporal Distance},
     author={Yuhua Jiang* and Qihan Liu* and Yiqin Yang and Xiaoteng Ma and Dianyu Zhong and Hao Hu and Jun Yang and Bin Liang and Bo XU and Chongjie Zhang and Qianchuan Zhao},
